#cmake_minimum_required(VERSION 3.2)
cmake_minimum_required(VERSION 2.8)

SET(VENUS_ENGINE_SOURCE
${PROJECT_SOURCE_DIR}
)

SET(VENUS_ENGINE_BINARY_DIR
${PROJECT_BINARY_DIR}
)

MESSAGE (STATUS "VENUS_ENGINE_SOURCE is " ${VENUS_ENGINE_SOURCE})
MESSAGE (STATUS "VENUS_ENGINE_BINARY_DIR is " ${VENUS_ENGINE_BINARY_DIR})

#cmake .. -DCMAKE_INSTALL_PREFIX=/opt/ali
SET(CMAKE_INSTALL_PREFIX /usr/local/venus)

#SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) #valid when build

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib64")

ADD_SUBDIRECTORY(libs)
ADD_SUBDIRECTORY(apps)
